Other updates (#535)
* Work

* Work

* Work on deprecation notices